# woff2-rs

./: Cargo.toml  README.md
src/: brotli.rs  buffer_util.rs  checksum.rs  decode.rs  lib.rs  test_data.rs  ttf_header.rs
src/glyf/: bitmap.rs  composite.rs  mod.rs  parser.rs  simple.rs  triplet.rs
src/woff2/: collection.rs  header.rs  mod.rs  tables.rs
tests/: decode.rs
