[package]
name = "woff2"
version = "0.3.0"
authors = ["Brian Hanechak <brianh@cimpress.com>", "Emily Crandall Fleischman <emily.fleischman@cimpress.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["woff2", "font", "parse"]
description = "WOFF2 decompression library"
repository = "https://github.com/Cimpress-MCP/woff2-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = { version = "8.0.2", default-features = false, features = ["std"] }
bytes = "1.11.1"
four-cc = "0.4.0"
safer-bytes = "0.2.0"
thiserror = "2.0.18"
bitvec = "1.0.1"

[dev-dependencies]
ttf-parser = "0.25.1"
